# lejepa

./: pyproject.toml
lejepa_caption/: __init__.py
lejepa_caption/models/: __init__.py  captioner.py  connector.py  decoder.py  encoder.py  predictor.py  sigreg.py
lejepa_caption/train/: __init__.py  dataset.py  gradcache.py  moco_queue.py  train.py
notebooks/: train_kaggle.ipynb
tests/: conftest.py  test_combined_loss.py  test_decoder.py  test_encoder_lejepa.py  test_gradcache.py  test_integration.py  test_moco_queue.py  test_model_components.py  test_training_components.py
